added discord auth

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ public/*.v3
 public/*.txt
 public/*.json
 src/assets/00_goods.txt
+public/Duke_salomoun_of_Lausitz_1120_08_21.ck3
+public/Emperor_Havel_of_Greater_Elbia_1208_03_24.ck3
