--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.18",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
+    "@types/jszip": "^3.4.0",
     "@types/leaflet": "^1.9.17",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
