--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~7.8.0",
     "stats.js": "^0.17.0",
     "three": "^0.179.1",
+    "three-stdlib": "^2.36.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
