added troop column

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ public/MY Emperor_Havel_of_Greater_Elbia_1208_03_24.ck3
 .VSCodeCounter/2025-09-24_01-39-47/results.json
 .VSCodeCounter/2025-09-24_01-39-47/results.md
 .VSCodeCounter/2025-09-24_01-39-47/results.txt
+public/King_Friedrich_of_Niederlothringen_1139_01_01.ck3
