--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:   # allow manual runs from Actions tab
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
